--- a/zxkt_parent/service/service_vod/src/main/resources/application.properties
+++ b/zxkt_parent/service/service_vod/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.profiles.active=dev
 
 # mysql?????
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/glkt_vod?characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/glkt_vod?characterEncoding=utf-8&useSSL=true
 spring.datasource.username=root
-spring.datasource.password=zm83388070
+spring.datasource.password=root
 
 #??json???????
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
