--- a/zxkt_parent/service/pom.xml
+++ b/zxkt_parent/service/pom.xml
@@ -21,6 +21,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>cn.edu.hit</groupId>
+            <artifactId>service_utils</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         <!--数据载体-->
         <dependency>
             <groupId>cn.edu.hit</groupId>
