配置腾讯云

--- a/zxkt_parent/service/service_vod/src/main/resources/application.properties
+++ b/zxkt_parent/service/service_vod/src/main/resources/application.properties
@@ -18,3 +18,13 @@ spring.jackson.time-zone=GMT+8
 
 #mybatis??
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+spring.servlet.multipart.max-file-size=1024MB
+spring.servlet.multipart.max-request-size=1024MB
+
+#???????????
+tencent.cos.file.region=ap-nanjing
+tencent.cos.file.secretid=AKIDoT0LH4h7KK9tQkrpa7QVSo4OXTDnCPPD
+tencent.cos.file.secretkey=f7MSN6xd9RUJxPcbP0PaXJvJboqlVYYN
+#bucket??????????????java????
+tencent.cos.file.bucketname=zxkt-1310254724
