--- a/zxkt_parent/service/service_vod/pom.xml
+++ b/zxkt_parent/service/service_vod/pom.xml
@@ -41,6 +41,12 @@
             <artifactId>velocity-engine-core</artifactId>
             <version>2.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>2.1.1</version>
+        </dependency>
     </dependencies>
 
 </project>
