--- a/zxkt_parent/service/service_vod/src/main/resources/application.properties
+++ b/zxkt_parent/service/service_vod/src/main/resources/application.properties
@@ -28,3 +28,5 @@ tencent.cos.file.secretid=AKIDoT0LH4h7KK9tQkrpa7QVSo4OXTDnCPPD
 tencent.cos.file.secretkey=f7MSN6xd9RUJxPcbP0PaXJvJboqlVYYN
 #bucket??????????????java????
 tencent.cos.file.bucketname=zxkt-1310254724
+
+mybatis-plus.mapper-locations=classpath:cn/edu/hit/zxkt/vod/mapper/xml/*.xml
