--- a/zxkt_parent/service/service_vod/src/main/resources/application.properties
+++ b/zxkt_parent/service/service_vod/src/main/resources/application.properties
@@ -30,3 +30,6 @@ tencent.cos.file.secretkey=f7MSN6xd9RUJxPcbP0PaXJvJboqlVYYN
 tencent.cos.file.bucketname=zxkt-1310254724
 
 mybatis-plus.mapper-locations=classpath:cn/edu/hit/zxkt/vod/mapper/xml/*.xml
+
+# nacos????
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
