搭建订单管理环境

--- a/zxkt_parent/service/pom.xml
+++ b/zxkt_parent/service/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>service_vod</module>
+        <module>service_order</module>
     </modules>
 
     <properties>
