实现订单列表接口

--- a/zxkt_parent/service_gateway/src/main/resources/application.properties
+++ b/zxkt_parent/service_gateway/src/main/resources/application.properties
@@ -17,3 +17,11 @@ spring.cloud.gateway.routes[0].id=service-vod
 spring.cloud.gateway.routes[0].uri=lb://service-vod
 #??????,??servicerId?auth-service?/auth/??
 spring.cloud.gateway.routes[0].predicates= Path=/*/vod/**
+
+#service-order????
+#????id
+spring.cloud.gateway.routes[1].id=service-order
+#?????uri
+spring.cloud.gateway.routes[1].uri=lb://service-order
+#??????,??servicerId?auth-service?/auth/??
+spring.cloud.gateway.routes[1].predicates= Path=/*/order/**
