--- a/zxkt_parent/service/pom.xml
+++ b/zxkt_parent/service/pom.xml
@@ -14,6 +14,8 @@
     <modules>
         <module>service_vod</module>
         <module>service_order</module>
+        <module>service_activity</module>
+        <module>service_user</module>
     </modules>
 
     <properties>
