--- a/zxkt_parent/service_gateway/src/main/resources/application.properties
+++ b/zxkt_parent/service_gateway/src/main/resources/application.properties
@@ -25,3 +25,19 @@ spring.cloud.gateway.routes[1].id=service-order
 spring.cloud.gateway.routes[1].uri=lb://service-order
 #??????,??servicerId?auth-service?/auth/??
 spring.cloud.gateway.routes[1].predicates= Path=/*/order/**
+
+#service-user????
+#????id
+spring.cloud.gateway.routes[2].id=service-user
+#?????uri
+spring.cloud.gateway.routes[2].uri=lb://service-user
+#??????,??servicerId?auth-service?/auth/??
+spring.cloud.gateway.routes[2].predicates= Path=/*/user/**
+
+#service-activity????
+#????id
+spring.cloud.gateway.routes[3].id=service-activity
+#?????uri
+spring.cloud.gateway.routes[3].uri=lb://service-activity
+#??????,??servicerId?auth-service?/auth/??
+spring.cloud.gateway.routes[3].predicates= Path=/*/activity/**
