--- a/zxkt_parent/service_gateway/src/main/resources/application.properties
+++ b/zxkt_parent/service_gateway/src/main/resources/application.properties
@@ -41,3 +41,11 @@ spring.cloud.gateway.routes[3].id=service-activity
 spring.cloud.gateway.routes[3].uri=lb://service-activity
 #??????,??servicerId?auth-service?/auth/??
 spring.cloud.gateway.routes[3].predicates= Path=/*/activity/**
+
+#service-wechat????
+#????id
+spring.cloud.gateway.routes[4].id=service-wechat
+#?????uri
+spring.cloud.gateway.routes[4].uri=lb://service-wechat
+#??????,??servicerId?auth-service?/auth/??
+spring.cloud.gateway.routes[4].predicates= Path=/*/wechat/**
