公众号菜单后端部分完成

--- a/zxkt_parent/service/service_wechat/src/main/resources/application.properties
+++ b/zxkt_parent/service/service_wechat/src/main/resources/application.properties
@@ -25,7 +25,7 @@ mybatis-plus.mapper-locations=classpath:cn/edu/hit/zxkt/wechat/mapper/xml/*.xml
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 
 #???id???
-# ??????????appId
-#wechat.mpAppId: wx09f201e9013e81d8
-# ??????????api??
-#wechat.mpAppSecret: 6c999765c12c51850d28055e8b6e2eda
+# appId
+wechat.mpAppId: wx12ac1c4936b73eb0
+# apiSecretKey
+wechat.mpAppSecret: 0f14a8b2b34cce8bbc572ed6138ad897
