--- a/zxkt_parent/service/service_vod/pom.xml
+++ b/zxkt_parent/service/service_vod/pom.xml
@@ -59,6 +59,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>cn.edu.hit</groupId>
+            <artifactId>service_user</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
