--- a/zxkt_parent/service/service_vod/src/main/resources/application.properties
+++ b/zxkt_parent/service/service_vod/src/main/resources/application.properties
@@ -29,7 +29,7 @@ tencent.cos.file.secretkey=f7MSN6xd9RUJxPcbP0PaXJvJboqlVYYN
 #bucket??????????????java????
 tencent.cos.file.bucketname=zxkt-1310254724
 
-#tencent.video.appid=
+tencent.video.appid=1310254724
 
 mybatis-plus.mapper-locations=classpath:cn/edu/hit/zxkt/vod/mapper/xml/*.xml
 
